# slate

./: .gitignore  README.md  io.github.wpkelso.slate.yaml  meson.build
.flatpak/: meson.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  merge.yml
data/: io.github.wpkelso.slate.desktop.in  meson.build  slate.gschema.xml  slate.metainfo.xml.in
po/: POTFILES  de.po  es.po  fr.po  io.github.wpkelso.slate.pot  ko.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po
src/: Application.vala  CutCopyPasteButtons.vala  SearchButton.vala  UndoRedoButtons.vala  Utils.vala  Window.vala  meson.build
